--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.20.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "exceljs": "^4.4.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
