--- a/qhse-expert-backend/package.json
+++ b/qhse-expert-backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
     "@tensorflow/tfjs": "^4.20.0",
+    "@tensorflow/tfjs-node": "^4.20.0",
     "body-parser": "^1.20.2",
     "express": "^4.19.2"
   },
