--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "exceljs": "^4.4.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +24,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "vite": "^4.0.0"
+    "vite": "^4.5.3"
   },
   "browserslist": [
     ">0.2%",
