--- a/qhse-expert-backend/package.json
+++ b/qhse-expert-backend/package.json
@@ -14,7 +14,16 @@
     "@tensorflow/tfjs": "^4.20.0",
     "@tensorflow/tfjs-node": "^4.20.0",
     "body-parser": "^1.20.2",
-    "express": "^4.19.2"
+    "chart.js": "^4.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "natural": "^7.1.0",
+    "react-chartjs-2": "^5.2.0",
+    "ws": "^8.18.0",
+    "xlsx": "^0.18.5"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "eslint": "^9.6.0"
+  }
 }
