--- a/qhse-expert-backend/package.json
+++ b/qhse-expert-backend/package.json
@@ -13,12 +13,16 @@
     "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
     "@tensorflow/tfjs": "^4.20.0",
     "@tensorflow/tfjs-node": "^4.20.0",
+    "axios": "^1.7.4",
     "body-parser": "^1.20.2",
+    "chai": "^5.1.1",
     "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "mocha": "^10.7.0",
     "natural": "^7.1.0",
     "react-chartjs-2": "^5.2.0",
+    "sinon": "^18.0.0",
     "ws": "^8.18.0",
     "xlsx": "^0.18.5"
   },
