--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-spring": "^9.7.2",
+    "redux": "^5.0.1",
     "wouter": "^2.11.0",
     "xlsx": "^0.18.5"
   },
