Working Prototype of chat Added to QHSE

--- a/qhse-expert-backend/package.json
+++ b/qhse-expert-backend/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "mocha": "^10.7.0",
     "natural": "^7.1.0",
+    "node-fetch": "^3.3.2",
     "react-chartjs-2": "^5.2.0",
     "sinon": "^18.0.0",
     "ws": "^8.18.0",
