--- a/qhse-expert-backend/package.json
+++ b/qhse-expert-backend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
     "@tensorflow/tfjs": "^4.20.0",
-    "@tensorflow/tfjs-node": "^4.20.0",
+    "@tensorflow/tfjs-node": "^4.21.0",
     "axios": "^1.7.4",
     "body-parser": "^1.20.2",
     "chai": "^5.1.1",
@@ -22,6 +22,7 @@
     "mocha": "^10.7.0",
     "natural": "^7.1.0",
     "node-fetch": "^3.3.2",
+    "python-shell": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "sinon": "^18.0.0",
     "ws": "^8.18.0",
