--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "exceljs": "^4.4.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
+    "ml-kmeans": "^6.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -23,6 +24,7 @@
     "react-redux": "^9.1.2",
     "react-spring": "^9.7.2",
     "redux": "^5.0.1",
+    "scikit-learn": "^0.1.0",
     "wouter": "^2.11.0",
     "xlsx": "^0.18.5"
   },
