--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "exceljs": "^4.4.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
+    "lime-js": "^3.0.1",
     "ml-kmeans": "^6.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -30,7 +31,7 @@
   },
   "devDependencies": {
     "eslint": "^9.10.0",
-    "vite": "^5.4.10"
+    "vite": "^4.4.0"
   },
   "browserslist": [
     ">0.2%",
